Fix wifi tab height shift when scroll arrows appear on mobile

--- a/src/NetworkOptimizer.Web/wwwroot/css/app.css
+++ b/src/NetworkOptimizer.Web/wwwroot/css/app.css
@@ -7694,6 +7694,7 @@ a.path-hop.hop-clickable:hover {
     display: flex;
     align-items: stretch;
     margin-bottom: 1.5rem;
+    min-height: 3rem;
 }
 
 .wifi-view-tabs {
@@ -7739,7 +7740,7 @@ a.path-hop.hop-clickable:hover {
 }
 
 .wifi-view-tabs-wrapper.has-overflow .wifi-view-tabs {
-    padding-top: 0.5rem;
+    margin-top: 0.5rem;
 }
 
 /* Collapse button when scrolled to start/end */
